SERVER-10516: Mitigate invalid address errors for MapViewOfFileEx